Update Project "project-a"

--- a/src/content/project/project-a.mdx
+++ b/src/content/project/project-a.mdx
@@ -1,7 +1,8 @@
 ---
 tag:
   - Intergalactic
-title: Project Alpha
+title: "Georgia State University: An Integrated Justice Platform to Connect
+  Criminal Justice Data Across Data Silos."
 description: all about this project
 intro: How A can B amazing.
 features:
@@ -75,7 +76,6 @@ style:
 thumbnail: /src/assets/project_a.jpeg
 date: 2023-08-20T14:46:56.898Z
 ---
-
 ## Project Alpha: Illuminating Galaxies, Crafting Universes
 
 Embark on a voyage of creation with "Project Alpha," a visionary endeavor by Glorbo Inc. that transcends the bounds of imagination. At the intersection of design and the cosmos, this daring project unveils the art of crafting entire universes. As celestial architects, we delve into the fabric of space and time, sculpting galaxies, birthing stars, and painting nebulae with hues beyond the visible spectrum. With boundless innovation, "Project Alpha" harmonizes the abstract with the tangible, forging a cosmos that dances to the rhythm of creativity. Join us as we redefine the boundaries of design, painting across the canvas of existence itself.
