Update Project "crafting-the-perfect-cosmic-mojito"

--- a/src/content/project/crafting-the-perfect-cosmic-mojito.mdx
+++ b/src/content/project/crafting-the-perfect-cosmic-mojito.mdx
@@ -1,9 +1,16 @@
 ---
 tag:
   - Portraits
-title: Crafting the Perfect Cosmic Mojito
-description: A Flavorful Journey Beyond the Stars
-intro: A Flavorful Journey Beyond the Stars
+title: "Georgia Institute of Technology: CollabNext: A Person-Focused Metafabric
+  for Open Knowledge Networks."
+description: >+
+  Georgia Institute of Technology: CollabNext: A Person-Focused Metafabric for
+  Open Knowledge Networks.
+
+intro: >+
+  Georgia Institute of Technology: CollabNext: A Person-Focused Metafabric for
+  Open Knowledge Networks.
+
 features:
   - name: State
     value: Perfection
