Update Project "unveiling-the-galactic-pluche-collection"

--- a/src/content/project/unveiling-the-galactic-pluche-collection.mdx
+++ b/src/content/project/unveiling-the-galactic-pluche-collection.mdx
@@ -2,15 +2,16 @@
 tag:
   - Portraits
   - Intergalactic
-title: Unveiling the Galactic Pluche Collection
-description: The "Galactic Pluche Collection" is a truly mesmerizing and
-  out-of-this-world assortment of plush toys that brings the wonders of the
-  universe into the palm of your hand. This collection is not just a set of
-  ordinary stuffed animals; it's a cosmic journey waiting to be explored.
-intro: The "Galactic Pluche Collection" is a truly mesmerizing and
-  out-of-this-world assortment of plush toys that brings the wonders of the
-  universe into the palm of your hand. This collection is not just a set of
-  ordinary stuffed animals; it's a cosmic journey waiting to be explored.
+title: "Insilica: BioBricks-OKG: An Open Knowledge Graph for Cheminformatics and
+  Chemical Safety."
+description: >+
+  Insilica: BioBricks-OKG: An Open Knowledge Graph for Cheminformatics and
+  Chemical Safety.
+
+intro: >+
+  Insilica: BioBricks-OKG: An Open Knowledge Graph for Cheminformatics and
+  Chemical Safety.
+
 hero_buttons:
   - icon_only: false
     label: Learn More
