--- a/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
+++ b/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Purdue University: Knowledge Graph Construction for Resilient,
-  Trustworthy, and Secure Software Supply Chains."
+title: "Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and
+  Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI."
 description: >+
-  Purdue University: Knowledge Graph Construction for Resilient, Trustworthy,
-  and Secure Software Supply Chains.
+  Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and
+  Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI.
 
 intro: >+
-  Purdue University: Knowledge Graph Construction for Resilient, Trustworthy,
-  and Secure Software Supply Chains.
+  Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and
+  Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI.
 
 style:
   template: split
@@ -18,7 +18,7 @@ style:
 thumbnail: /src/assets/cosmic_blog_settings.jpeg
 date: 2023-12-01T04:28:40.616Z
 ---
-Purdue University: Knowledge Graph Construction for Resilient, Trustworthy, and Secure Software Supply Chains.
+Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI.
 
 
 
