Update Project "purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains"

--- a/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
+++ b/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and
-  Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI."
+title: "Temple University: Knowledge Graph to Support Evaluation and Development
+  of Climate Models."
 description: >+
-  Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and
-  Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI.
+  Temple University: Knowledge Graph to Support Evaluation and Development of
+  Climate Models.
 
 intro: >+
-  Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and
-  Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI.
+  Temple University: Knowledge Graph to Support Evaluation and Development of
+  Climate Models.
 
 style:
   template: split
@@ -18,7 +18,7 @@ style:
 thumbnail: /src/assets/cosmic_blog_settings.jpeg
 date: 2023-12-01T04:28:40.616Z
 ---
-Temple University: DREAM-KG: Develop Dynamic, REsponsive, Adaptive, and Multifaceted Knowledge Graphs to Address Homelessness With Explainable AI.
+Temple University: Knowledge Graph to Support Evaluation and Development of Climate Models.
 
 
 
