Update Project "purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains"

--- a/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
+++ b/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Temple University: Knowledge Graph to Support Evaluation and Development
-  of Climate Models."
+title: "The University of Alabama: Creating a Cross-Domain Knowledge Graph to
+  Integrate Health and Justice for Rural Resilience."
 description: >+
-  Temple University: Knowledge Graph to Support Evaluation and Development of
-  Climate Models.
+  The University of Alabama: Creating a Cross-Domain Knowledge Graph to
+  Integrate Health and Justice for Rural Resilience.
 
 intro: >+
-  Temple University: Knowledge Graph to Support Evaluation and Development of
-  Climate Models.
+  The University of Alabama: Creating a Cross-Domain Knowledge Graph to
+  Integrate Health and Justice for Rural Resilience.
 
 style:
   template: split
@@ -18,7 +18,7 @@ style:
 thumbnail: /src/assets/cosmic_blog_settings.jpeg
 date: 2023-12-01T04:28:40.616Z
 ---
-Temple University: Knowledge Graph to Support Evaluation and Development of Climate Models.
+The University of Alabama: Creating a Cross-Domain Knowledge Graph to Integrate Health and Justice for Rural Resilience.
 
 
 
