--- a/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
+++ b/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
@@ -1,13 +1,13 @@
 ---
-title: "The University of Alabama: Creating a Cross-Domain Knowledge Graph to
-  Integrate Health and Justice for Rural Resilience."
+title: "University of California, San Francisco: Connecting Biomedical
+  Information on Earth and in Space via the SPOKE Knowledge Graph."
 description: >+
-  The University of Alabama: Creating a Cross-Domain Knowledge Graph to
-  Integrate Health and Justice for Rural Resilience.
+  University of California, San Francisco: Connecting Biomedical Information on
+  Earth and in Space via the SPOKE Knowledge Graph.
 
 intro: >+
-  The University of Alabama: Creating a Cross-Domain Knowledge Graph to
-  Integrate Health and Justice for Rural Resilience.
+  University of California, San Francisco: Connecting Biomedical Information on
+  Earth and in Space via the SPOKE Knowledge Graph.
 
 style:
   template: split
@@ -18,7 +18,7 @@ style:
 thumbnail: /src/assets/cosmic_blog_settings.jpeg
 date: 2023-12-01T04:28:40.616Z
 ---
-The University of Alabama: Creating a Cross-Domain Knowledge Graph to Integrate Health and Justice for Rural Resilience.
+University of California, San Francisco: Connecting Biomedical Information on Earth and in Space via the SPOKE Knowledge Graph.
 
 
 
