--- a/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
+++ b/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
@@ -1,13 +1,13 @@
 ---
-title: "University of California, San Francisco: Connecting Biomedical
-  Information on Earth and in Space via the SPOKE Knowledge Graph."
+title: "University of Cincinnati: The Water-Energy Nexus Open Knowledge Network
+  (WEN-OKN)"
 description: >+
-  University of California, San Francisco: Connecting Biomedical Information on
-  Earth and in Space via the SPOKE Knowledge Graph.
+  University of Cincinnati: The Water-Energy Nexus Open Knowledge Network
+  (WEN-OKN)
 
 intro: >+
-  University of California, San Francisco: Connecting Biomedical Information on
-  Earth and in Space via the SPOKE Knowledge Graph.
+  University of Cincinnati: The Water-Energy Nexus Open Knowledge Network
+  (WEN-OKN)
 
 style:
   template: split
@@ -18,7 +18,7 @@ style:
 thumbnail: /src/assets/cosmic_blog_settings.jpeg
 date: 2023-12-01T04:28:40.616Z
 ---
-University of California, San Francisco: Connecting Biomedical Information on Earth and in Space via the SPOKE Knowledge Graph.
+University of Cincinnati: The Water-Energy Nexus Open Knowledge Network (WEN-OKN)
 
 
 
