--- a/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
+++ b/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
@@ -1,13 +1,10 @@
 ---
-title: "University of Cincinnati: The Water-Energy Nexus Open Knowledge Network
-  (WEN-OKN)"
-description: >+
-  University of Cincinnati: The Water-Energy Nexus Open Knowledge Network
-  (WEN-OKN)
+title: "University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)"
+description: |+
+  University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)
 
-intro: >+
-  University of Cincinnati: The Water-Energy Nexus Open Knowledge Network
-  (WEN-OKN)
+intro: |+
+  University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)
 
 style:
   template: split
@@ -18,7 +15,7 @@ style:
 thumbnail: /src/assets/cosmic_blog_settings.jpeg
 date: 2023-12-01T04:28:40.616Z
 ---
-University of Cincinnati: The Water-Energy Nexus Open Knowledge Network (WEN-OKN)
+University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)
 
 
 
