Update Project "purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains"

--- a/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
+++ b/src/content/project/purdue-university-knowledge-graph-construction-for-resilient-trustworthy-and-secure-software-supply-chains.mdx
@@ -1,10 +1,14 @@
 ---
-title: "University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)"
-description: |+
-  University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)
+title: "University of Notre Dame: Exploiting Federal Data and Beyond: A
+  Multi-modal Knowledge Network for Comprehensive Wildlife Management Under
+  Climate Change."
+description: >+
+  University of Notre Dame: Exploiting Federal Data and Beyond: A Multi-modal
+  Knowledge Network for Comprehensive Wildlife Management Under Climate Change.
 
-intro: |+
-  University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)
+intro: >+
+  University of Notre Dame: Exploiting Federal Data and Beyond: A Multi-modal
+  Knowledge Network for Comprehensive Wildlife Management Under Climate Change.
 
 style:
   template: split
@@ -15,7 +19,7 @@ style:
 thumbnail: /src/assets/cosmic_blog_settings.jpeg
 date: 2023-12-01T04:28:40.616Z
 ---
-University of Maine: Safe Agricultural Products and Water Graph. (SAWGraph)
+University of Notre Dame: Exploiting Federal Data and Beyond: A Multi-modal Knowledge Network for Comprehensive Wildlife Management Under Climate Change.
 
 
 
