--- a/src/content/config/project.mdx
+++ b/src/content/config/project.mdx
@@ -1,8 +1,8 @@
 ---
-title: "My Cosmos Craftsmanship Collection "
+title: "Projects"
 description: asdadadsad
 intro: "\n\n\n"
-per_page: 10
+per_page: 20
 hero_buttons:
   - icon_only: false
     label: Read more
