--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -1,15 +1,11 @@
 ---
 main_menu: 
-  - label: Blog
-    href: /blog
-  - label: Shop
-    href: /shop
-  - label: Work
-    href: /work
-  - label: Menu
-    href: /menu/drinks
   - label: About
     href: /about-nebulix
+  - label: Blog
+    href: /blog
+  - label: Projects
+    href: /work
   - label: Contact
     href: "#contact"
 footer_menus:
