--- a/src/content/config/about.mdx
+++ b/src/content/config/about.mdx
@@ -1,5 +1,5 @@
 ---
-sitename: Nebulix
+sitename: Proto-OKN
 intro: |
   A theme for Astro + StaticCms
 team:
@@ -20,10 +20,5 @@ tag:
   - docs
   - fantasy
 footer_text: >
-  Where Stellar Ideas Shine Bright. Explore limitless possibilities with
-  **Nebulix**, the fast static site template that fuels blogs, portfolios, shops
-  & menus – igniting your digital nebula of creativity.
 newsletter_text: >
-  **Join our newsletter** and stay updated on new features, themes &
-  developments.
 ---
