--- a/src/content/config/contact.mdx
+++ b/src/content/config/contact.mdx
@@ -1,34 +1,27 @@
 ---
-email: hello@unfolding.io
-phone_label: 06 22222222
-phone_link: tel:+3460000000
+email: guha@onai.com
+phone_label: 
+phone_link: 
 social:
   - icon: /src/icons/github.svg
     label: github
-    href: https://github.com/unfolding-io/nebulix
-    icons: null
-  - icon: /src/icons/instagram.svg
-    label: instagram
-    href: https://www.instagram.com/unfolding.io/
-  - icon: /src/icons/whatsapp.svg
-    label: Whatsapp
-    href: https://wa.me/34649712625
+    href: https://github.com/jayavanth/nebulix
     icons: null
 form:
   thumbnail: /src/assets/cosmic_contact_settings.jpeg
   provider: slack
   topics:
     - label: I want to know more about your service(s)
-      email: hello@unfolding.io
+      email: guha@onai.com
       slack_id: C018CLER317
     - label: I need premium support
-      email: hello@chosio.io
+      email: guha@onai.com
       slack_id: C018CLER317
     - label: I need help with custom integrations
-      email: hello@unfolding.io
+      email: guha@onai.com
       slack_id: C018CLER317
     - label: I want to say thanks!
-      email: hello@unfolding.io
+      email: guha@onai.com
       slack_id: C018CLER317
   title: |
     Talk to us
