--- a/src/content/config/blog.mdx
+++ b/src/content/config/blog.mdx
@@ -1,9 +1,9 @@
 ---
-title: Astronomical News & Stories
+title: Proto-OKN Blogposts
 description: |
-  Astronomical News & Stories
+  .
 intro: |
-  Read about updates, documentation, features and fiction.
+  .
 per_page: 10
 hero_buttons: []
 blog_tags:
